@@ -11,6 +11,32 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 - Observability: Export each recurring schedule's next run and the expected
   interval to the following run for cadence-aware Prometheus alerting.
+- Observability: Export standard `hikaricp_*` metrics for the frontend and
+  backend PostgreSQL connection pools.
+- Observability: Export live capacity, utilization, queue depth, completion,
+  and permit-wait metrics for source-update and item-processing executors plus
+  command, media-download, and streaming throttles. Export aggregate in-flight
+  work counts by kind/stage and the age of the oldest source and item work.
+- Dashboard: New Activity tab replaces the raw Threads tab with bounded-resource
+  saturation, queued work, mean waits, current source/item pipeline activity,
+  stragglers, and a grouped thread census; full stack traces remain available in
+  a collapsed diagnostic section.
+- Schedules: New canned schedules `:noon`, `:now-and-noon`, `:every-4-hours`,
+  `:now-and-every-4-hours`, and `:now-and-every-15-minutes`.
+- Feeds: Support feeds whose entries have no title (notably Bluesky). The item
+  title falls back to the entry description, GUID, or link, and the item hash
+  falls back to the entry GUID.
+- Streaming: `src/streaming-channel` now accepts playlist URLs in addition to
+  channel URLs.
+- Podcast: Dashboard "Untag" action removes the `:podcast` tag from an episode
+  while keeping the downloaded blob, and permanently failed downloads are
+  untagged when their tracking entry is cleaned up.
+- HTTP: New `:http` config keys `:connection-timeout-ms` (default 10000),
+  `:connection-request-timeout-ms` (default 10000), and `:socket-timeout-ms`
+  (default 120000).
+- Configuration: Add `:throttle` concurrency limits for source updates (default
+  4) and item post-processing (default `:auto`, based on available processors),
+  alongside the existing command, downloader, and streaming limits.
 
 ### Changed
 
@@ -21,6 +47,80 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
   and service network lookups. Readability fetches no longer launch the bundled
   `yt-dlp`; explicitly podcast-tagged URLs use the existing configured system
   `yt-dlp` download and retry path.
+- HTTP: Apply connection, connection-request, and socket timeouts to all
+  outbound requests.
+- Docker: Compose now runs `postgres:18` and mounts the database volume at
+  `/var/lib/postgresql` instead of `/var/lib/postgresql/data`. See the upgrade
+  notes below.
+- Reader: YouTube previews now embed via `youtube-nocookie.com` and send
+  `referrerpolicy=strict-origin-when-cross-origin`.
+- Build: Move `clj-memory-meter` and its `-Djdk.attach.allowAttachSelf=true` JVM
+  option to the `:dev` profile.
+- Updates: Replace nested `pmap` calls with separate, named, bounded executors
+  for source updates and item post-processing. Bulk updates now preserve input
+  order, isolate per-source failures as structured outcomes, and apply the same
+  global source limit to individual dashboard-triggered updates.
+- Updates: Enforce atomic single-flight admission per source, including forced
+  updates, so overlapping schedules, Reader requests, and Dashboard requests
+  cannot fetch and store the same source concurrently.
+- Throttling: Replace command, media-download, and streaming semaphores with
+  managed, observable throttles using the configured capacities.
+- Reddit: Migrate fetching from the retired unauthenticated `.json` endpoints to
+  the OAuth2 Data API, with cached client-credentials tokens, synchronized
+  renewal, one retry after a rejected token, and rate-limit logging. Dynamic
+  score filtering now reuses the fetched listing instead of making a second
+  request.
+- Dependencies: Upgrade selected Clojure libraries (jsoup, Bouncy Castle, Apache
+  Tika, OpenNLP, NewPipeExtractor, Migratus, and REPL tooling), Node.js metadata
+  extraction dependencies (jsdom, DOMPurify, metascraper), and the vendored web
+  assets Font Awesome and DataTables. DataTables moves from `3.0.0-beta.2` to the
+  stable `3.0.1`.
+
+### Fixed
+
+- Commands: Fall back to a concurrency limit of 2 when `:throttle
+  :command-max-concurrent` or `:throttle :av-downloader-max-concurrent` is absent
+  from the configuration, instead of failing to construct the semaphore.
+- Blobstore: Tolerate a broken blob properties file whose read error carries no
+  content payload, which previously threw while recreating the file.
+- Reader: Fix the lazy YouTube view so the preview thumbnail and the embedded
+  player fill their aspect-ratio container.
+- Updates: Prevent forced or racing requests from starting duplicate updates for
+  one source, and prevent one unexpected source failure from aborting the rest
+  of a bulk update result.
+- Reddit: Drop malformed API entries instead of passing `nil` into
+  post-processing, and correctly combine the configured minimum score with the
+  dynamic top-5-percent cutoff.
+
+### Upgrade notes
+
+- **Docker: PostgreSQL 16 to 18 requires `pg_upgrade`.** From 18 on,
+  the official image stores data in a major-version subdirectory
+  (`PGDATA` is `/var/lib/postgresql/18/docker`), which is why the
+  compose mount moved up to `/var/lib/postgresql`. An existing
+  `llar-postgresql` volume from 4.0.0 holds a version 16 cluster at
+  its root. The image detects this and refuses to start, exiting with
+  an error that points at `pg_upgrade` — it does not silently create
+  an empty cluster, so no data is destroyed, but `llar` will not come
+  up until the cluster is migrated. Either run `pg_upgrade --link`
+  with both major versions available, or dump and restore:
+  `pg_dumpall` from a `postgres:16` container with the old volume
+  mounted at `/var/lib/postgresql/data`, then restore into a fresh
+  volume under the new layout.
+- **Readability-sourced items re-import once.** Sanitization moved from the
+  whole fetched document to the extracted article content under a stricter
+  DOMPurify configuration, which changes the content that item hashes are
+  derived from. Existing Readability items will be fetched again as new items on
+  the next update.
+- **Some feed entries re-import once.** Entries that have a title but no `link`
+  now hash on their GUID rather than their title, so they will be fetched again
+  as new items on the next update.
+- **Reddit sources now require OAuth2 application credentials.** Create a
+  Reddit "script" application and configure `:reddit {:app-id "..." :secret
+  "..." :username "..."}` in `credentials.edn`; the old Reddit password is no
+  longer used. The `:random` listing is no longer accepted because Reddit returns
+  a single post rather than a listing, and `:best` remains a global front-page
+  listing that ignores the configured subreddit.
 
 ## [4.0.0] - 2026-07-11
 
